# cuda-demo

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  main.cpp
benches/: bench.rs  bm.rs
include/: dot.cuh  dot.h  random.hpp
src/: bm.rs  cuda.rs  dot.cpp  dot.cu  lib.rs  par.rs  seq.rs
src/kernels/: matmul.cu
tile/: main.py  pyproject.toml
