[package]
name = "cuda-demo"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
cudarc = { version = "0.18.1", features = [
    "cuda-version-from-build-system",
    "curand",
] }
rayon = "1.11"

[dev-dependencies]
criterion = "0.8"
diffusionx = "0.8.2"

[[bench]]
name = "bm"
harness = false
